<resources>
    <string name="app_name">LMS 2022</string>

    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>

    <string name="quote_password_prompt">Master password is required to modify changes. Master password is different from Administrator\'s password</string>
    <string name="prompt_require_restart">Some preference modifications need application restart to apply changes! Click here to restart now</string>
    <string name="remove_item">Remove item?</string>

    <string name="prompt_require_shop_setup">No shop preference setup</string>
    <string name="prompt_require_admin_setup">No Administrator account setup</string>
    <string name="prompt_delete_machine">Are you sure you want to delete this Machine and all of its Usage History?\n It cannot be undone!</string>
    <string name="prompt_delete_wash_service">Are you sure you want to delete this Wash Service?\n It cannot be undone!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="no_items_in_here">There\'s nothing here!</string>
    <string name="delete">DELETE</string>
    <string name="confirm_delete">Confirm Delete?</string>
    <string name="remove">Remove</string>
    <string name="symbol_bullet">●</string>
    <string name="regular_washer">8KG Washer</string>
    <string name="regular_dryer">8KG Dryer</string>
    <string name="titan_washer">12KG Washer</string>
    <string name="titan_dryer">12KG Dryer</string>
    <string name="activate">Activate</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="payment">View Payment</string>
    <string name="print">Print</string>
    <string name="locked_job_order_prompt">The Job Order cannot be modified if it was created on a previous date other than today or if it has already been paid.</string>
    <string name="remarks">Remarks</string>

    <string name="permission_prompt">
<![CDATA[
<p><b>To use the app, you need to grant it the necessary permissions to enable or disable Bluetooth and access location services.</b></p>
<p>These permissions are required for the app to function properly and provide the intended features.</p>
<br/>
<p>When you launch the app for the first time, it will prompt you to grant the necessary permissions. This includes the ability to <b>turn on/off Bluetooth</b> and access <b>location services</b>.</p>
<p>By granting these permissions, you allow the app to manage Bluetooth functionality and retrieve location information as required.</p>
<br/>
<p>Please note that enabling these permissions is crucial for the app&apos;s functionality, as it relies on Bluetooth and location services to provide you with a seamless experience.</p>
<p>Rest assured that the app will handle these permissions responsibly and in accordance with the applicable privacy and security guidelines.</p>
]]>
    </string>
    <string name="keyword">Keyword</string>
    <string name="unpaid_prompt">This customer has previous unpaid job orders.</string>
    <string name="Continue">Continue</string>
    <string name="create_new">Create New</string>
    <string name="privilege_prompt">Required privilege for this operation</string>
    <string name="discard">Discard</string>
    <string name="print_single_line">--------------------------------</string>
    <string name="not_official_receipt_disclaimer">Disclaimer: This document is provided for informational purposes only. It does not constitute an official receipt and should not be considered proof of payment.</string>
    <string name="prompt_no_wifi_connectivity">You are not connected to a WiFi Network</string>
    <string name="prompt_unpaid_limit_reached">This customer already hit the maximum limit for unpaid job orders. To continue, settle outstanding balances</string>
    <string name="what_do_you_want_to_print">What do you want to print?</string>
    <string name="no_results_found">No results found!</string>
    <string-array name="jo_filter_by">
        <item>Date Paid</item>
        <item>Date Created</item>
    </string-array>
    <string-array name="sort_direction">
        <item>DESC</item>
        <item>ASC</item>
    </string-array>
    <string-array name="order_by_customers">
        <item>Number of Job Orders</item>
        <item>Last Visit</item>
        <item>First Visit</item>
        <item>Name</item>
    </string-array>
    <string-array name="order_by_job_orders">
        <item>Date Created</item>
        <item>Job Order Number</item>
        <item>Date Paid</item>
        <item>Customer Name</item>
    </string-array>
    <string-array name="payment_status">
        <item>Paid only</item>
        <item>Unpaid only</item>
        <item>Paid and Unpaid</item>
    </string-array>
</resources>
